# fdc

./: .gitignore  Analyse.ipynb  CMakeLists.txt  Doxyfile  Makefile  README.md  dataset.experiment.csv  examples.sh  test.sh
dataset/: analyse.yaml
doc/: README_8md.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_f9f3dae433c1dbc6fe49040f18c7bd8a.html  globals.html  index.html  main_8cpp.html  main_8cpp__incl.md5  namespacefd__cover.html  namespacefd__cover.js  namespacefd__cover_1_1types.html  namespacefdc.js  namespacefdc_1_1types.html  namespacefdc_1_1utils.html  namespacemembers.html  namespacemembers_func.html  namespacerdm.html  namespacerdm.js  namespacerdm_1_1types.html  namespacerdm_1_1utils.html  namespaces.html  navtreeindex0.js  pages.html  rdm_8cpp.html  rdm_8cpp.js  rdm_8cpp__dep__incl.map  rdm_8cpp__dep__incl.md5  rdm_8cpp__incl.map  rdm_8cpp__incl.md5  types_8h.html  types_8h.js  types_8h__dep__incl.map  types_8h__incl.map  types_8h__incl.md5  utils_8cpp.html  utils_8cpp.js  utils_8cpp__incl.map  utils_8cpp__incl.md5  utils_8h.html  (+4 more)
docs/: 1_8cpp.html  1_8cpp.js  1_8cpp__incl.map  1_8cpp__incl.md5  2_8cpp.html  2_8cpp.js  2_8cpp__incl.map  2_8cpp__incl.md5  3_8cpp.html  3_8cpp.js  3_8cpp__incl.map  3_8cpp__incl.md5  4_8cpp.html  4_8cpp.js  4_8cpp__incl.map  4_8cpp__incl.md5  5_8cpp.html  5_8cpp.js  5_8cpp__incl.map  5_8cpp__incl.md5  (+3399 more)
src/fdc/: CMakeLists.txt  algorithm.cpp  fdc.cpp  fdc.h  fdc.hpp  io.cpp  qmc.cpp  set-algebra.cpp  types.h  union-operation.cpp  utils.cpp  utils.h
(+303 files in other folders)
